🚀 chore(package.json): add next-themes package as a dependency 🔧 fix(globals.css): comment out height property in .bg-gray-200/10 class ✨ feat(layout.js): import and wrap children with Providers component 🔧 fix(page.js): add transition-colors and duration-150 delay-150 classes to .bg-gray-200/10 class 📦 feat: add dark.png and light.png assets 🔧 fix(Chatty.js): adjust width classes for responsive design 🔧 fix(Navbar.js): add missing imports and adjust JSX syntax 📦 feat(Providers.js): create Providers component to wrap children with ThemeProvider 🔧 chore(tailwind.config.js): enable dark mode with 'class' attribute

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@
   position: absolute;
   content: "";
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   filter: blur(100px) saturate(150%);
   top: 80px;
   opacity: 0.15;
@@ -36,4 +36,9 @@
   border-radius: 20px;
   background: linear-gradient(145deg, #cacaca73, #f0f0f089);
   box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+  @apply  dark:shadow-none dark:bg-gray-950 dark:text-gray-50 
+}
+
+.theme-btn{
+  @apply px-2.5 py-2 border-2 rounded-lg w-fit mx-auto border-gray-400 text-gray-700 dark:text-gray-200 
 }
